--- a/FlixTv/Views/Account/Login.cshtml
+++ b/FlixTv/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
 
                             </div>
 
-                            <button class="sign__btn" type="button" value="Log in">Sign in</button>
+                            <button class="sign__btn" type="submit" value="Log in">Sign in</button>
 
                             <span class="sign__delimiter">or</span>
 
