--- a/FlixTv/Views/Shared/ClientComponents/_NavigationBar.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_NavigationBar.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
+
 <header class="header header--static">
     <div class="container">
         <div class="row">
@@ -75,10 +76,28 @@
                         @*-----------Search End-------------*@
 
                         @*-----------SignIn Start-------------*@
-                        <a href="@Url.Action("Login", "Account", new {Url="https://localhost:44353/" })" class="header__user">
-                            <span>Sign in</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,12a1,1,0,0,0-1-1H11.41l2.3-2.29a1,1,0,1,0-1.42-1.42l-4,4a1,1,0,0,0-.21.33,1,1,0,0,0,0,.76,1,1,0,0,0,.21.33l4,4a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42L11.41,13H19A1,1,0,0,0,20,12ZM17,2H7A3,3,0,0,0,4,5V19a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V16a1,1,0,0,0-2,0v3a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V5A1,1,0,0,1,7,4H17a1,1,0,0,1,1,1V8a1,1,0,0,0,2,0V5A3,3,0,0,0,17,2Z" /></svg>
-                        </a>
+                        @if (Request.IsAuthenticated)
+                        {
+                            using(Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "header__user" }))
+                            {
+                                @Html.AntiForgeryToken()
+
+                               
+                                @Html.ActionLink(User.Identity.GetUserName() + "'s Profile", "Index", "Manage", routeValues: null, htmlAttributes: new {  title = "Manage" })
+                                
+                                <a   href="javascript:document.getElementById('logoutForm').submit()">Sign Out</a>
+                               
+                            }
+                        }
+                        else
+                        {
+                        
+                            <a href="/Account/Login" class="header__user">
+                                <span>Sign in</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,12a1,1,0,0,0-1-1H11.41l2.3-2.29a1,1,0,1,0-1.42-1.42l-4,4a1,1,0,0,0-.21.33,1,1,0,0,0,0,.76,1,1,0,0,0,.21.33l4,4a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42L11.41,13H19A1,1,0,0,0,20,12ZM17,2H7A3,3,0,0,0,4,5V19a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V16a1,1,0,0,0-2,0v3a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V5A1,1,0,0,1,7,4H17a1,1,0,0,1,1,1V8a1,1,0,0,0,2,0V5A3,3,0,0,0,17,2Z" /></svg>
+                            </a>
+                        }
+                        
                         @*-----------SignIn End-------------*@
                     </div>
                 </div>
@@ -104,7 +123,7 @@
             var searchingTitle = $("#Title").val();
             var form = document.forms[0];
             form.action = "https://localhost:44353/Movie/Search?Title=" + searchingTitle;
-            return true; 
+            return true;
         }
 
 
