--- a/FlixTv/Views/Shared/ClientComponents/_Footer.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_Footer.cshtml
@@ -18,10 +18,10 @@
             <div class="col-6 col-md-4 col-lg-3 col-xl-2 order-1 order-md-2 order-lg-1 order-xl-2 offset-md-2 offset-lg-0 offset-xl-1">
                 <h6 class="footer__title">FlixTV</h6>
                 <div class="footer__nav">
-                    <a href="about.html">About us</a>
-                    <a href="profile.html">My profile</a>
-                    <a href="pricing.html">Pricing plans</a>
-                    <a href="contacts.html">Contacts</a>
+                    <a href="~/www/main/about.html">About us</a>
+                    <a href="~/www/main/profile.html">My profile</a>
+                    <a href="~/www/main/pricing.html">Pricing plans</a>
+                    <a href="~/www/main/contacts.html">Contacts</a>
                 </div>
             </div>
 
@@ -30,10 +30,10 @@
             <div class="col-6 col-md-4 col-lg-3 col-xl-2 order-2 order-lg-3 order-md-4 order-xl-4">
                 <h6 class="footer__title">Help</h6>
                 <div class="footer__nav">
-                    <a href="privacy.html">Account & Billing</a>
-                    <a href="privacy.html">Plans & Pricing</a>
-                    <a href="privacy.html">Supported devices</a>
-                    <a href="privacy.html">Accessibility</a>
+                    <a href="~/www/main/privacy.html">Account & Billing</a>
+                    <a href="~/www/main/privacy.html">Plans & Pricing</a>
+                    <a href="~/www/main/privacy.html">Supported devices</a>
+                    <a href="~/www/main/privacy.html">Accessibility</a>
                 </div>
             </div>
         </div>
