--- a/FlixTv/Views/Shared/ClientComponents/_Plan.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_Plan.cshtml
@@ -6,21 +6,21 @@
             </div>
         </div>
         <div class="row">
-            @*---------------Regular Start--------------*@
+            @*---------------Free Trial Start--------------*@
             <div class="col-12 col-md-6 col-xl-4 order-md-2 order-xl-1">
                 <div class="plan">
-                    <h3 class="plan__title">Regular</h3>
+                    <h3 class="plan__title">Free Trial(30 days)</h3>
                     <ul class="plan__list">
                         <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> FlixTV Originals</li>
                         <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Switch plans or cancel anytime</li>
-                        <li class="red"><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.596 1.59982L1.60938 17.5865" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /><path d="M17.601 17.5961L1.60101 1.5928" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Stream 65+ top Live</li>
-                        <li class="red"><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.596 1.59982L1.60938 17.5865" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /><path d="M17.601 17.5961L1.60101 1.5928" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> TV channels</li>
+                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Unlimited Movies</li>
+                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Exclusive Series</li>
                     </ul>
-                    <span class="plan__price">$11.99<span>/month</span></span>
+                    <span class="plan__price">$0.00<span>/month</span></span>
                     <button class="plan__btn" type="button">Select plan</button>
                 </div>
             </div>
-            @*---------------Regular End--------------*@
+            @*---------------Free Trial End--------------*@
 
             @*---------------Premium Start--------------*@
             <div class="col-12 col-xl-4 order-md-1 order-xl-2">
@@ -29,10 +29,11 @@
                     <ul class="plan__list">
                         <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> FlixTV Originals</li>
                         <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Switch plans or cancel anytime</li>
-                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Stream 65+ top Live</li>
-                        <li class="red"><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.596 1.59982L1.60938 17.5865" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /><path d="M17.601 17.5961L1.60101 1.5928" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> TV channels</li>
+                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Unlimited Movies</li>
+                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Exclusive Series</li>
+                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg>Dive into binge-worthy moview & series available only on FlixTV</li>
                     </ul>
-                    <span class="plan__price">$34.99<span>/month</span></span>
+                    <span class="plan__price">$14.99<span>/month</span></span>
                     <button class="plan__btn" type="button">Select plan</button>
                 </div>
             </div>
