--- a/FlixTv/Views/Account/Register.cshtml
+++ b/FlixTv/Views/Account/Register.cshtml
@@ -18,26 +18,26 @@
                         <a href="/Home/Index" class="sign__logo">
                             <img src="~/www/main/img/logo.svg" alt="">
                         </a>
-
+                        if(ViewBag.Message != null) { <a style="color:red">* @ViewBag.Message</a>}
                         @Html.ValidationSummary("", new { @class = "text-danger", style = "color:red" })
                         <br />
                         <div class="sign__group">
                             @Html.TextBoxFor(m => m.Email, new { @class = "sign__input", @placeholder = "Email" })
-                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger", style = "color:red" })
                         </div>
 
                         <div class="sign__group">
                             @Html.TextBoxFor(m => m.Password, new { @class = "sign__input", @placeholder = "Password" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger", style = "color:red" })
                         </div>
 
                         <div class="sign__group">
                             @Html.TextBoxFor(m => m.ConfirmPassword, new { @class = "sign__input", @placeholder = "Confirm Password" })
-                            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger", style = "color:red" })
                         </div>
                         <div class="sign__group sign__group--checkbox">
                             <input id="Agree" name="Agree" type="checkbox" value="true">
-                            <label for="Agree">I agree to the <a href="~/www/main/privacy.html">Privacy Policy</a></label>
+                            <label for="Agree">* Agree to the <a href="~/www/main/privacy.html">Privacy Policy</a></label>
                         </div>
                     
                         <button class="sign__btn" type="submit" >Sign up</button>
